--- a/components/Layout/lay.module.css
+++ b/components/Layout/lay.module.css
@@ -9,9 +9,11 @@
   padding: 0 10%;
 }
 .footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: red;
+  color: white;
+  text-align: center;
 }
